[package]
name = "sosistab2-obfstls"
version = "0.1.0"
edition = "2021"
repository="https://github.com/geph-official/sosistab2-obfstls"
license="ISC"
description="obfuscated TLS transport for sosistab2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
futures-util = "0.3.28"
smol = "1.3.0"
smol-timeout = "0.6.0"
sosistab2="0.10"
subtle = "2.5.0"
async-native-tls = { version = "0.4.0", features = ["vendored"] }
native-tls = "0.2.11"
smolscale = "0.4.0"
log = "0.4.20"
async-dup = "1.2.2"
stdcode = "0.1.14"
serde={ version = "1.0.148", features = ["derive", "rc"] }
arrayref = "0.3.7"
rand = "0.7"
